--- a/about/templates/about/about_page.html
+++ b/about/templates/about/about_page.html
@@ -32,7 +32,7 @@
       </div>
         <div class="col-12">
         <div class="text-center">
-          <div class="overlay">
+          <div class="overlay p-5">
             {% image page.call_image fill-5000x5000-c0 as img %}
             <img src="{{ img.url }}" alt="{{ img.alt }}" class="img-fluid">
           </div>
