add google gtag

--- a/about/templates/about/about_page.html
+++ b/about/templates/about/about_page.html
@@ -14,7 +14,7 @@
     <p>{{ page.about_bio|richtext }}</p>
   </div>
 
-  <div class="skills text-center">
+  <div class="skills text-left">
     <h3>{{ page.skills_title|richtext }}</h3>
     <div class="skills-list">
     <hr class="m-3">
