--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -120,7 +120,7 @@
 
 
     </div>
-    <div class="jumbotron pt-1 text-center mb-">
+    <div class="container pt-1 text-center mb-">
         <p>Click here to submit your request.</p>
         <button type="submit" class="mdc-button foo-button">
             <div class="mdc-button__ripple"></div>
