--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /* 
 BRAND COLORS
 $accent: #9AD4D6;
@@ -17,6 +16,11 @@ header {
     background-color: #101935;
 }
 
+.user-name span {
+    color: #9AD4D6 !important;
+    font-weight: 900;
+
+}
 .content {
     background-color: #F2FDFF;
     color: #101935;
@@ -129,5 +133,3 @@ header {
     background-color: #9AD4D66a;
 }
 
-=======
->>>>>>> parent of f979f0b... style testing for admin complete
