--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -82,28 +82,29 @@
                         Your Information</h1>
                     <div class="collapse" id="collapse3">
                         <div class="row text-center">
-                            <div class="col-12 col-md form-group">
+                            <div class="col-12 col-md-12 form-group">
                                 <label for="firstName">First Name</label>
                                 <input type="text" class="form-control mb-2 w-75 mx-auto" id="firstName"
                                     name="First Name" placeholder="John">
                             </div>
-                            <div class="col-12 col-md form-group">
+                            <div class="col-12 col-md-12 form-group">
                                 <label for="lastName">Last Name</label>
                                 <input type="text" class="form-control w-75 mx-auto" id="lastName" name="Last Name"
                                     placeholder="Doe">
                             </div>
-                            <div class="col-12 col-md form-group">
+                            <div class="col-12 col-md-12 form-group">
                                 <label for="email">Email address</label>
                                 <input type="email" class="form-control w-75 mx-auto" id="email" name="Email"
                                     placeholder="name@example.com">
 
                             </div>
-                            <div class="col-12 col-md form-group">
+                            <div class="col-12 col-md-12 form-group">
                                 <label for="phoneNumber">Phone Number</label>
                                 <input type="text" class="form-control w-75 mx-auto" id="phoneNumber"
                                     name="Phone Number" placeholder="+254721234567">
                             </div>
-                            <div class="col-12 form-group">
+                            <div class="col-12 col-md-12 form-group">
+                              <label for="details">Details</label>
                                 <textarea id="details" name="details" id="details" cols="30" rows="10"
                                     placeholder="You can use this form to add more details about your request"
                                     class="form-control w-75 mx-auto"></textarea>
