--- a/contact/templates/contact/contact_page.html
+++ b/contact/templates/contact/contact_page.html
@@ -81,24 +81,24 @@
                     <h1 class="item-name" data-toggle="collapse" data-target="#collapse3"><span class="number">3.</span>
                         Your Information</h1>
                     <div class="collapse" id="collapse3">
-                        <div class="row text-center">
-                            <div class="col-12 col-md-12 form-group">
+                        <div class="row text-center justify-content-center">
+                            <div class="col-12 col-md-6 form-group">
                                 <label for="firstName">First Name</label>
                                 <input type="text" class="form-control mb-2 w-75 mx-auto" id="firstName"
                                     name="First Name" placeholder="John">
                             </div>
-                            <div class="col-12 col-md-12 form-group">
+                            <div class="col-12 col-md-6 form-group">
                                 <label for="lastName">Last Name</label>
                                 <input type="text" class="form-control w-75 mx-auto" id="lastName" name="Last Name"
                                     placeholder="Doe">
                             </div>
-                            <div class="col-12 col-md-12 form-group">
+                            <div class="col-12 col-md-6 form-group">
                                 <label for="email">Email address</label>
                                 <input type="email" class="form-control w-75 mx-auto" id="email" name="Email"
                                     placeholder="name@example.com">
 
                             </div>
-                            <div class="col-12 col-md-12 form-group">
+                            <div class="col-12 col-md-6 form-group">
                                 <label for="phoneNumber">Phone Number</label>
                                 <input type="text" class="form-control w-75 mx-auto" id="phoneNumber"
                                     name="Phone Number" placeholder="+254721234567">
